Table country {
  id int [pk]
  country nvarchar2(255)
  last_update timestamp
}

Table city {
  id int [pk]
  city nvarchar2(255)
  country_id int [ref: > country.id]
  last_update timestamp
}

Table address {
  id int [pk]
  address nvarchar2(255)
  address2 nvarchar2(255)
  district nvarchar2(255)
  city_id int [ref: > city.id]
  postal_code nvarchar2(255)
  phone nvarchar2(255)
  last_update timestamp
}

Table customer {
  id int [pk]
  store_id int
  first_name nvarchar2(255)
  last_name nvarchar2(255)
  email nvarchar2(255)
  address_id int [ref: > address.id]
  active number(1)
  create_Date timestamp
  last_update timestamp

  Indexes {
    (id, first_name) [type: btree, name: "IDX_CUSTOMER"]
  }
}
